# ottoserver_python

./: .gitignore  README.md  main.py  pyproject.toml
api/config/: __base_config.py  __init__.py  config.py  database.py  security.py
api/database/: database.py
api/models/: products.py  users.py
api/routes/: auth.py  products.py  users.py
api/services/: __init__.py  auth.py  products.py  users.py
