[tool.poetry]
name = "ottoserver-python"
version = "0.1.0"
description = "servidor de otto, con fastapi"
authors = ["Otto Silva"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
pydantic = "^2.9.2"
pymongo = "^4.10.1"
pydantic-mongo = "^2.3.0"
python-dotenv = "^1.0.1"
fastapi-jwt = {extras = ["authlib"], version = "^0.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
